# MedTok

./: .gitignore  .readthedocs.yaml  README.md  dataset.py  example.ipynb  example_generator.ipynb  example_tokenizer.ipynb  index.html  llms.txt  load_models.py  pyproject.toml  requirements.txt  robots.txt  sitemap.xml
.github/workflows/: docs.yml  publish-pypi.yml  tests.yml
api/: genindex.html  index.html  objects.inv  search.html  searchindex.js
api/.doctrees/: index.doctree
api/.doctrees/api/: alignments.doctree  base.doctree  first_stage.doctree  generators.doctree  registry.doctree  scheduling.doctree  utils.doctree  wrapper.doctree
api/.doctrees/getting_started/: installation.doctree  model_naming.doctree  quickstart.doctree
api/.doctrees/guides/: adding_models.doctree  custom_scheduler.doctree  hosting.doctree
api/_modules/: index.html
api/_modules/medlat/: base.html  registry.html  scheduling.html  utils.html
api/_modules/medlat/modules/: alignments.html
api/_modules/medlat/scheduling/: flow.html  gaussian.html  self_flow.html
api/_sources/getting_started/: quickstart.rst.txt
api/api/: alignments.html  base.html  first_stage.html  generators.html  registry.html  scheduling.html  utils.html  wrapper.html
api/getting_started/: installation.html  quickstart.html
api/guides/: adding_models.html  custom_scheduler.html  hosting.html
docs/: README.md  index.html  llms.txt
docs/api/: .buildinfo  genindex.html  index.html  objects.inv  searchindex.js
docs/api/.doctrees/: index.doctree
docs/api/.doctrees/api/: alignments.doctree  base.doctree  first_stage.doctree  generators.doctree  registry.doctree  scheduling.doctree  utils.doctree  wrapper.doctree
docs/api/.doctrees/getting_started/: installation.doctree  model_naming.doctree  quickstart.doctree
docs/api/.doctrees/guides/: adding_models.doctree  custom_scheduler.doctree  hosting.doctree
docs/api/_modules/: index.html
docs/api/_modules/medlat/: base.html  registry.html  utils.html
docs/api/_sources/api/: base.rst.txt
docs/api/_sources/getting_started/: installation.rst.txt  model_naming.rst.txt
docs/api/api/: base.html  first_stage.html  generators.html  registry.html  scheduling.html  utils.html  wrapper.html
docs/api/getting_started/: model_naming.html
docs/api/guides/: custom_scheduler.html
docs/source/: index.rst
docs/source/api/: alignments.rst  scheduling.rst  utils.rst
docs/source/guides/: adding_models.rst  custom_scheduler.rst
examples/: example_self_flow.ipynb  example_self_flow_run.py
medlat/: __init__.py  base.py  registry.py  schedulers.py  utils.py
medlat/diffusion/: __init__.py
medlat/first_stage/continuous/: register.py  vae_models.py
medlat/first_stage/continuous/modules/: maisi_modules.py
medlat/first_stage/discrete/: register.py  vq_models.py
medlat/first_stage/token/: register.py
medlat/first_stage/token/titok/: modules.py
medlat/first_stage/token/vmae/: models.py  register.py
medlat/generators/autoregressive/fractal/: ar.py  mar.py  pixelloss.py  register.py
medlat/generators/autoregressive/mage/: mage.py  register.py
medlat/generators/autoregressive/mar/: mar.py  register.py
medlat/generators/autoregressive/maskbit/: register.py
medlat/generators/autoregressive/maskgit/: register.py  transformer.py
medlat/generators/autoregressive/muse/: attend.py
medlat/generators/autoregressive/rar/: rar.py  register.py
medlat/generators/non_autoregressive/: __init__.py
medlat/modules/: alignments.py  pos_embed.py  vit_core.py  wrapper.py
medlat/scheduling/: __init__.py  base.py  diffloss.py  flow.py  gaussian.py  gaussian_diffusion.py  integrators.py  loss_weighting.py  path.py  self_flow.py  utils.py
medlat/transport/: __init__.py  integrators.py  path.py  transport.py
medtok/: __init__.py
medtok/diffusion/: __init__.py  diffloss.py  gaussian_diffusion.py  loss_weighting.py
medtok/first_stage/: __init__.py
medtok/first_stage/continuous/: __init__.py  register.py  vae_models.py
medtok/first_stage/discrete/: register.py  vq_models.py
medtok/first_stage/token/: __init__.py
medtok/generators/: __init__.py
medtok/generators/dit/: README.md  __init__.py  models.py  register.py
medtok/generators/mar/: README.md  __init__.py  mar.py  register.py
medtok/generators/maskgit/: README.md  layers.py  transformer.py  txt_transformer.py
medtok/modules/: in_and_out.py  pos_embed.py  vit_core.py  wrapper.py
source/: conf.py
source/_static/: custom.css
source/api/: first_stage.rst  generators.rst  registry.rst  wrapper.rst
source/guides/: hosting.rst
src/continuous/: register.py  vae_models.py
src/continuous/modules/: ldm_modules.py
src/discrete/: __init__.py  register.py  vq_models.py
src/discrete/quantizer/: quantize.py
src/modules/: gaussian_dist.py  in_and_out.py  pos_embed.py
src/token/detok/: detok.py
src/token/maetok/: maetok.py
src/token/titok/: modules.py  titok.py
tests/: registry_integration.py  test_alignments.py  test_base_classes.py  test_fixes.py  test_integration_wrapper.py  test_registry_extended.py  test_self_flow.py  test_validate_compatibility_extended.py  test_wrapper_validation.py
(+43 files in other folders)
