[build-system]
# setuptools 69+ adds PEP 639 "License-File" in wheel metadata; older twine fails
# `twine check` with "unrecognized field 'license-file'". Pin until twine/packaging catch up.
requires = ["setuptools>=61.0,<69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medlat"
version = "0.1.2"
description = "A comprehensive collection of quantizers, continuous autoencoders, and tokenizers for medical imaging and general visual data processing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Niklas Bubeck", email = "niklas.bubeck@tum.de"}
]
keywords = [
    "medical imaging",
    "tokenization",
    "quantization",
    "autoencoder",
    "vae",
    "vq-vae",
    "vq-gan",
    "pytorch",
    "deep learning"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "numpy>=1.21.0",
    "einops>=0.4.0",
    "timm>=0.6.0",
    "omegaconf>=2.1.0",
    "monai>=1.0.0",
    "opencv-python-headless>=4.5.0",
    "open-clip-torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=5.1.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["medlat*"]
exclude = ["tests*"]
[tool.setuptools.package-data]
"*" = ["*.py", "*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]






